--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ opencv-python>=4.8.0
 Pillow>=10.1.0
 speechrecognition>=3.10.0
 pyttsx3>=2.90
+pyaudio>=0.2.11
 
 # Qt UI (headless only)
 PyQt6>=6.6.0
