--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,51 @@
+# ARAS Environment Configuration Example
+# Copy this file to .env and update the values for your setup
+
+# =============================================================================
+# AI Configuration
+# =============================================================================
+
 # OpenAI Configuration
 OPENAI_API_KEY=your_openai_api_key_here
-OPENAI_MODEL=gpt-4.1-mini
+OPENAI_MODEL=gpt-4o-mini
 WHISPER_MODEL=whisper-1
 TTS_MODEL=tts-1
 
 # Ollama Configuration (Alternative to OpenAI)
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama2
+USE_OLLAMA=false
+
+# OpenRouter Configuration (Alternative to OpenAI)
+OPENROUTER_API_KEY=your_openrouter_api_key_here
+OPENROUTER_BASE_URL=https://openrouter.ai/api/v1
+USE_OPENROUTER=false
+
+# Grok Configuration (via OpenRouter)
+GROK_API_KEY=your_grok_api_key_here
+GROK_BASE_URL=https://openrouter.ai/api/v1
+GROK_MODEL=x-ai/grok-4-fast:free
+USE_GROK=false
+
+# =============================================================================
+# Smart Home Configuration
+# =============================================================================
 
 # Home Assistant
 HA_BASE_URL=http://localhost:8123
-HA_TOKEN=your_home_assistant_token
+HA_TOKEN=your_home_assistant_token_here
 
-# Vector Database
-CHROMA_PERSIST_DIRECTORY=./data/chroma
+# Raspberry Pi Configuration
+PI_HOST=192.168.1.100                    # IP address or hostname of your Raspberry Pi
+PI_PORT=22                               # SSH port (default: 22)
+PI_USERNAME=pi                          # SSH username (default: pi)
+PI_PASSWORD=your_raspberry_pi_password  # SSH password
+# PI_KEY_FILE=/path/to/your/private_key  # SSH private key file (alternative to password)
+PI_GPIO_ENABLED=true                    # Enable GPIO control (default: true)
+
+# =============================================================================
+# Communication Services
+# =============================================================================
 
 # Email Configuration
 SMTP_SERVER=smtp.gmail.com
@@ -22,11 +54,60 @@ EMAIL_USERNAME=your_email@gmail.com
 EMAIL_PASSWORD=your_app_password
 
 # Twilio (for SMS)
-TWILIO_ACCOUNT_SID=your_twilio_sid
-TWILIO_AUTH_TOKEN=your_twilio_token
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=+1234567890
 
+# Telegram Configuration
+TELEGRAM_API_ID=your_telegram_api_id
+TELEGRAM_API_HASH=your_telegram_api_hash
+TELEGRAM_PHONE=+1234567890
+
+# =============================================================================
 # System Configuration
+# =============================================================================
+
+# Agent Configuration
+AGENT_NAME=Aras
+OWNER_NAME=Your Name
 LOG_LEVEL=INFO
+
+# Server Configuration
+HOST=localhost
 WEBSOCKET_PORT=8765
 HTTP_PORT=8000
+
+# Vector Database
+CHROMA_PERSIST_DIRECTORY=./data/chroma
+
+# UI Configuration
+UI_THEME=dark
+UI_SCALE=1.0
+
+# Voice Configuration
+DEFAULT_VOICE=Zira
+VOICE_RATE=0
+VOICE_VOLUME=100
+
+# =============================================================================
+# Raspberry Pi Setup Instructions
+# =============================================================================
+
+# 1. Enable SSH on your Raspberry Pi:
+#    sudo systemctl enable ssh
+#    sudo systemctl start ssh
+
+# 2. Install Python GPIO library on the Pi:
+#    sudo apt update
+#    sudo apt install python3-rpi.gpio
+
+# 3. Set up SSH key authentication (recommended):
+#    ssh-keygen -t rsa -b 4096 -C "aras@your-computer"
+#    ssh-copy-id pi@192.168.1.100
+#    Then uncomment and set PI_KEY_FILE above
+
+# 4. Test connection:
+#    ssh pi@192.168.1.100
+
+# 5. Run the test script:
+#    python test_raspberry_pi_tool.py
